tests/rosetta/out/Swift/associative-array-creation.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:07Z
func removeKey(_ m: [String: Int], _ k: String) -> [String: Int] {
    var out: [String: Int] = []
    for key in m {
        if key != k {
            out[key] = m[key]
        }
    }
    return out
}
func main() {
    var x: [String: Int] = nil
    x = []
    x["foo"] = 3
    let y1 = x["bar"]!
    let ok = x.keys.contains("bar")
    print(y1)
    print(ok)
    x = removeKey(x, "foo")
    x = ["foo": 2, "bar": 42, "baz": -1]
    print((x["foo"] as! Int), (x["bar"] as! Int), (x["baz"] as! Int))
}
main()
